# vidoo

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
tests/: test_sample.py
vidoo/utils/: util.py
