[tool.poetry]
name = "vidoo"
version = "0.1.0"
description = "test package publish"
authors = ["abhijeet"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
isort = "^5.6.4"
autoflake = "^1.4"
black = "^20.8b1"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
twine = "^3.2.0"
poetry-setup = "^0.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
